unpackaged/main/default/objects/Sample_Formula_Fields__c/Sample_Formula_Fields__c.object-meta.xml
<CustomObject>
    <label>Sample Formula Field</label>
    <nameField>
        <label>Sample Formula Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sample Formula Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>