unpackaged/main/default/objects/Sample_Formula_Fields__c/fields/Colored_Circles__c.field-meta.xml
<CustomField>
    <fullName>Colored_Circles__c</fullName>
    <formula>IMAGE( CASE( Ratings__c , 1, "/img/samples/rating1.gif", 2, "/img/samples/rating2.gif", 3, "/img/samples/rating3.gif", 4, "/img/samples/rating4.gif", 5, "/img/samples/rating5.gif", "/s.gif"), "rating")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Colored Circles</label>
    <type>Text</type>
</CustomField>