unpackaged/main/default/objects/Sample_Formula_Fields__c/fields/Image_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Image_Hyperlink__c</fullName>
    <label>Image Hyperlink</label>
    <type>Url</type>
</CustomField>