unpackaged/main/default/objects/Sample_Formula_Fields__c/fields/Industry_Score__c.field-meta.xml
<CustomField>
    <fullName>Industry_Score__c</fullName>
    <formula>IMAGE("/img/samples/color_green.gif", "green", 15,  Industry_Score_a__c * 2) &amp; IMAGE("/s.gif", "white", 15, 200 - ( Industry_Score_a__c  * 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Score</label>
    <type>Text</type>
</CustomField>