unpackaged/main/default/objects/Sample_Formula_Fields__c/fields/Industry_Score_a__c.field-meta.xml
<CustomField>
    <fullName>Industry_Score_a__c</fullName>
    <label>Industry Score (a)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>