unpackaged/main/default/objects/Sample_Formula_Fields__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <formula>HYPERLINK( Image_Hyperlink__c, IMAGE(Image_URL__c,"Image Not Available"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>