unpackaged/main/default/objects/Sample_Formula_Fields__c/fields/Priority_Flag__c.field-meta.xml
<CustomField>
    <fullName>Priority_Flag__c</fullName>
    <formula>IMAGE( CASE( Priority__c,  "Low", "/img/samples/flag_green.gif", "Medium", "/img/samples/flag_yellow.gif", "High", "/img/samples/flag_red.gif", "/s.gif"), "priority flag")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Flag</label>
    <type>Text</type>
</CustomField>