unpackaged/main/default/objects/Sample_Formula_Fields__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <formula>IMAGE( CASE(  Ratings__c , 1, "/img/samples/stars_100.gif", 2, "/img/samples/stars_200.gif", 3, "/img/samples/stars_300.gif", 4, "/img/samples/stars_400.gif", 5, "/img/samples/stars_500.gif", "/img/samples/stars_000.gif"), "rating")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <type>Text</type>
</CustomField>