unpackaged/main/default/objects/Sample_Formula_Fields__c/fields/Ratings__c.field-meta.xml
<CustomField>
    <fullName>Ratings__c</fullName>
    <label>Ratings</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>