unpackaged/main/default/objects/Sample_Formula_Fields__c/fields/Skype_Me__c.field-meta.xml
<CustomField>
    <fullName>Skype_Me__c</fullName>
    <formula>HYPERLINK("callto://" &amp; "+1"&amp;  Phone_Number__c, IMAGE("http://goodies.skype.com/graphics/skypeme_btn_small_blue.gif", "Click to Skype"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skype Me</label>
    <type>Text</type>
</CustomField>