unpackaged/main/default/objects/Sample_Formula_Fields__c/fields/Stock_Chart__c.field-meta.xml
<CustomField>
    <fullName>Stock_Chart__c</fullName>
    <formula>HYPERLINK("http://finance.yahoo.com/q/bc?s=" &amp;  Ticker__c &amp; "&amp;t=1d", IMAGE("http://ichart.yahoo.com/t?s=" &amp; Ticker__c , "Ticker Image", 96,192) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Chart</label>
    <type>Text</type>
</CustomField>