unpackaged/main/default/objects/Sample_Formula_Fields__c/fields/Ticker__c.field-meta.xml
<CustomField>
    <fullName>Ticker__c</fullName>
    <label>Ticker</label>
    <length>4</length>
    <type>Text</type>
</CustomField>