unpackaged/main/default/objects/Sample_Formula_Fields__c/fields/Traffic_Light__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Light__c</fullName>
    <formula>IMAGE( CASE(  Project_Status__c , "Green", "/img/samples/light_green.gif", "Yellow", "/img/samples/light_yellow.gif", "Red", "/img/samples/light_red.gif", "/s.gif"), "status color")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Traffic Light</label>
    <type>Text</type>
</CustomField>