unpackaged/main/default/objects/Sample_Formula_Fields__c/fields/Yahoo_ID__c.field-meta.xml
<CustomField>
    <fullName>Yahoo_ID__c</fullName>
    <label>Yahoo ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>