unpackaged/main/default/objects/Sample_Formula_Fields__c/fields/Yahoo_Presence__c.field-meta.xml
<CustomField>
    <fullName>Yahoo_Presence__c</fullName>
    <formula>IF(LEN( Yahoo_ID__c )=0,"", HYPERLINK("ymsgr:sendIM?" &amp;  Yahoo_ID__c , IMAGE("http://opi.yahoo.com/online?u=" &amp;  Yahoo_ID__c &amp; "&amp;m=g&amp;t=0", " ")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yahoo Presence</label>
    <type>Text</type>
</CustomField>